--- a/queensAttack.ipynb
+++ b/queensAttack.ipynb
@@ -4,95 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solution to queensAttack problem from www.hackerrank.com"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Question"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Function Description\n",
-    "\n",
-    "Complete the queensAttack function in the editor below. It should return an integer that describes the number of squares the queen can attack.\n",
-    "\n",
-    "queensAttack has the following parameters: \n",
-    "- n: an integer, the number of rows and columns in the board \n",
-    "- k: an integer, the number of obstacles on the board \n",
-    "- r_q: integer, the row number of the queen's position \n",
-    "- c_q: integer, the column number of the queen's position \n",
-    "- obstacles: a two dimensional array of integers where each element is an array of  integers, the row and column of an obstacle\n",
-    "\n",
-    "Input Format\n",
-    "\n",
-    "The first line contains two space-separated integers  and , the length of the board's sides and the number of obstacles. \n",
-    "\n",
-    "The next line contains two space-separated integers  and , the queen's row and column position. \n",
-    "\n",
-    "Each of the next  lines contains two space-separated integers  and , the row and column position of .\n",
-    "\n",
-    "Constraints\n",
-    "\n",
-    "A single cell may contain more than one obstacle.\n",
-    "\n",
-    "There will never be an obstacle at the position where the queen is located.\n",
-    "\n",
-    "Output Format\n",
-    "\n",
-    "Print the number of squares that the queen can attack from position .\n",
-    "\n",
-    "Sample Input 0\n",
-    "\n",
-    "4 0\n",
-    "\n",
-    "4 4\n",
-    "\n",
-    "Sample Output 0\n",
-    "\n",
-    "9\n",
-    "\n",
-    "Sample Input 1\n",
-    "\n",
-    "5 3\n",
-    "\n",
-    "4 3\n",
-    "\n",
-    "5 5\n",
-    "\n",
-    "4 2\n",
-    "\n",
-    "2 3\n",
-    "\n",
-    "Sample Output 1\n",
-    "\n",
-    "10\n",
-    "\n",
-    "Sample Input 2\n",
-    "\n",
-    "1 0\n",
-    "\n",
-    "1 1\n",
-    "\n",
-    "Sample Output 2\n",
-    "\n",
-    "0\n",
-    "\n",
-    "Explanation 2\n",
-    "\n",
-    "Since there is only one square, and the queen is on it, the queen can move 0 squares."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## queensAttack Function"
+    "## Main Function"
    ]
   },
   {
